Some consistency updates

--- a/labs/rustycoder-python-restAPI-flask/1.md
+++ b/labs/rustycoder-python-restAPI-flask/1.md
@@ -1,85 +1,34 @@
-# Rusty Coder : REST APIs in Python with Flask and requests
+# Rusty Coder: REST APIs in Python with Flask and requests
 
-This DevNet learning lab helps rusty coders 1) create REST APIs for their Python programs using Flask and 2) make REST API calls from their Python programs using requests.
+This DevNet Learning Lab helps rusty coders 1) create REST APIs for their Python programs using Flask and 2) make REST API calls from their Python programs using the `requests` library.
 
-This DevNet learning lab helps the rusty coder quickly download modern software tools and use them to write a Hello World app. It is not a comprehensive tutorial about the tools, as there are many free resources out there today. Rather, it is a way to quickly get set up, get hands on, and get working code. We made some choices for you to minimize the research you need to do to get coding. We assume that you will dig deeper after you're done to learn more.
+This DevNet Learning Lab helps the rusty coder quickly download modern software tools and use them to write a Hello World app. It is not a comprehensive tutorial about the tools, as there are many resources out there today. Rather, it is a way to quickly get set up, get hands on, and get working code. We made some choices for you to minimize the research you need to do to get coding. We assume that you will dig deeper after you're done to learn more.
 
-A rusty coder is someone who coded in their past (say, over 5, 10, or 20 years ago) and wants to get started again using the tools that are available today in a fast easy way. A rusty coder probably used Unix or Windows in the past. A rusty coder has used a command line and coded with APIs in an older operating system and language, but may not have coded with REST APIs. This learning lab is designed for developing on a Mac today.
+A rusty coder is someone who coded in their past (say, over 5, 10, or 20 years ago) and wants to get started again using the tools that are available today in a fast easy way. A rusty coder probably used Unix or Windows in the past. A rusty coder has used a command line and coded with APIs in an older operating system and language, but may not have coded with REST APIs. This Learning Lab is designed for developing on a Mac today.
 
 ## Objectives
 
-The modern software world speaks to each other using REST APIs. Since you're writing code in Python, it's useful to 1) make your python code available through a REST API call and 2) make REST API calls from your python code.
+The modern software world speaks to each other using REST APIs. Since you're writing code in Python, it's useful to make your Python code available through a REST API call and make REST API calls from your Python code.
 
-The objective of this lab is to show the rusty coder how to:
+The objective of this lab is to show a rusty coder how to:
 
 * Install and use the Python **Flask** package.
 * Install and use the Python **requests** package.
-* Make a web server/web service for your python program using Flask.
-* Create a REST API service for your python program using **Flask**.
-* Make a REST API call with a python program using **requests**.
+* Make a web server/web service for your Python program using Flask.
+* Create a REST API service for your Python program using **Flask**.
+* Make a REST API call with a Python program using **requests**.
 
 ## Prerequisites
 
-This assumes you already installed and know how to use the Mac terminal, python3, git, GitHub, and Postman. If you need to do this, please take the DevNet learning lab entitled [Hello World for the Rusty Coder : Get Setup](https://learninglabs.cisco.com/modules/rustycoder-getstarted/helloworld-rustycoder-getsetup/step/1).
+This assumes you already installed and know how to use the Mac terminal, python3, git, GitHub, and Postman. If you need to do this, please take the DevNet Learning Lab titled [Hello World for the Rusty Coder: Get Setup](https://learninglabs.cisco.com/modules/rustycoder-getstarted/helloworld-rustycoder-getsetup/step/1).
 
-## Step 1. Install the Python **Flask** and **requests** packages.
+## Step 1: Install the Python **Flask** and **requests** packages
 
-Now that you are set up to write cool python programs, you may ask how do I make my program available through a REST API and how do I call a REST API? The power of python is all the packages that you can use, and sure enough the area of web frameworks is no exception.
+Now that you are set up to write cool Python programs, you may ask how do I make my program available through a REST API and how do I call a REST API? The power of Python is all the packages that you can use, and sure enough the area of web frameworks is no exception.
 
 In a nutshell, to make REST API calls you can use a package called **requests**. To create a REST API you can use a web framework that includes a web server and tools to help you construct a REST API. There are many choices such as **Django** and **Flask**. We recommend Flask for the rusty coder to get started with their first apps, because it's lightweight and easy to use. As you progress and want to put your code into production, you can look at more complete packages such as Django.
 
-Let's get going by installing **requests** and **Flask** using the **pip3** python package installer. (I'm assuming you have **python3** installed on your Mac, which automatically installs **pip3**. If you are on Windows, you need to install **python3** and **pip3** separately.)
+Let's get going by installing **requests** and **Flask** using the **pip3** Python package installer. (I'm assuming you have **python3** installed on your Mac, which automatically installs **pip3**. If you are on Windows, you need to install **python3** and **pip3** separately.)
 * `pip3 install requests` Install requests.
 * `pip3 install Flask` Install Flask.
 Easy peasy!
-
-## Step 2. Make a web server/web service for your python program using Flask.
-
-Next, we will create a web server for your python program. This involves creating a simple web server/service in your app and defining its behavior for incoming web requests.
-
-We created some sample code to get you started. Let's go get it from GitHub.
-
-* `cd /Users/username/Code` Go to your working directory.
-* `git clone http://github.com/CiscoDevNet/devnet-rustycoder-samplecode` Download the sample code from Cisco DevNet.
-* `cd devnet-rustycoder-samplecode/python-flask-helloworld`
-You will see a file called `web-server.py`. Let's take a closer look at what's inside.
-
-The first part simply imports the Flask library and creates the app instance.
-```
-# import flask library
-from flask import Flask
-
-# create an app instance
-app = Flask(__name__)
-```
-The next part defines the behavior of your program for web requests. We are defining two behaviors- one for when the user visits the base URL `http://baseurl/` and the other for when the user visits `http://baseurl/devnet`
-```
-# define url router, this function will respond when a user visits "/"
-@app.route('/')
-def hello_world():
-    // Put your python code here!
-    return 'Hello, World!'
-
-# define url router, this function will respond when a user visits "/devnet"
-@app.route('/devnet')
-def hello_devnet():
-    // Put your python code here!
-    return 'Hello, DevNet!'
-```
-The last part runs the webserver with your defined behavior when the script is executed. This is where you specify the URL and port.
-```
-# main entry
-if __name__ == '__main__':
-    # run app when the script is executed
-    # this will create a web server at port 8080, you can visit http://0.0.0.0:8080/ and http://0.0.0.0:8080/devnet
-    app.run(host='0.0.0.0', port=8080, debug=True)
-```
-Let's run this.
-* `python3 web-server.py` Run this command
-* Open a browser and go to `http://0.0.0.0:8080/` You should see "Hello, World!"
-* Now go to `http://0.0.0.0:8080/devnet` You should see "Hello, DevNet!"
-Congratulations! You just created a web service for your python program! You served it through your simple web server running at port 8080. Exciting!
-
-You can put all your python code in here and create some really cool web services. Next, we need to RESTify it so that your program can respond to REST requests.
-
-#### Next Step: Create a REST API service for your python program using Flask.
