--- a/labs/rustycoder-python-restAPI-flask/2.md
+++ b/labs/rustycoder-python-restAPI-flask/2.md
@@ -1,73 +1,51 @@
-## Step 3. Create a REST API service for your python program using Flask.
+# Step 2. Make a web server/web service for your Python program using Flask.
 
-It's also useful to expose your python program through REST APIs. This can be done easily with Flask. We have some sample code to get you started in a file called ``rest-api.py``. You downloaded it earlier.
+Next, we will create a web server for your Python program. This involves creating a simple web server/service in your app and defining its behavior for incoming web requests.
 
-* `cd /Users/username/Code/devnet-rustycoder-samplecode/python-flask-helloworld`
-* `more rest-api.py`
+We created some sample code to get you started. Let's go get it from GitHub.
 
-We will create a more interesting web server/web service and RESTify the API. Now let's take a deeper look at the code.
+* `cd /Users/username/Code` Go to your working directory.
+* `git clone http://github.com/CiscoDevNet/devnet-rustycoder-samplecode` Download the sample code from Cisco DevNet.
+* `cd devnet-rustycoder-samplecode/python-flask-helloworld`
+You will see a file called `web-server.py`. Let's take a closer look at what's inside.
 
-The first part imports the Flask library and creates the app instance, but this time we will import some useful functions that will help us with our REST calls.
+The first part simply imports the Flask library and creates the app instance.
 ```
-# import functions from the flask library
-from flask import Flask, jsonify, request, abort
+# import flask library
+from flask import Flask
 
 # create an app instance
 app = Flask(__name__)
 ```
-Next, we will create a new resource called `devices` which has an `id`, device name `name`, and device IP address `ip`.
-```
-# create a devices resource
-devices = [
-    {
-        "id": 0,
-        "name": "NX-9K-1",
-        "ip": "10.0.0.1"
-    },
-    {
-        "id": 1,
-        "name": "NX-9K-2",
-        "ip": "10.0.0.2"
-    }
-]
-```
-Next, we define the behavior of our program for the REST APIs. We are creating a REST API for `http://baseurl/api/devices/` with `GET` and `POST`. We will turn our response into JSON using `jsonify`.
-```
-# handle GET request
-@app.route('/api/devices/', methods=['GET'])
-def get_devices():
-    return jsonify({'tasks': devices})
+The next part defines the behavior of your program for web requests. We are defining two behaviors- one for when the user visits the base URL `http://baseurl/` and the other for when the user visits `http://baseurl/devnet`.
 
-# handle POST request
-@app.route('/api/devices/', methods=['POST'])
-def post_device():
-    #  check required parameters
-    # if doesn't have all required parameters, return 404 error
-    if not request.json or 'name' not in request.json or 'ip' not in request.json:
-        abort(404)
-
-    # generate device obj
-    device = {
-        "id": len(devices),
-        "name": request.json['name'],
-        "ip": request.json['ip']
-    }
-
-    # add device obj to devices resources
-    devices.append(device)
-
-    # return devices resources with 201 state code
-    return jsonify({'task': devices}), 201
 ```
-The last part runs the webserver with your REST API at the specified URL and port when the script is executed.
+# define url router, this function will respond when a user visits "/"
+@app.route('/')
+def hello_world():
+    // Put your Python code here!
+    return 'Hello, World!'
+
+# define url router, this function will respond when a user visits "/devnet"
+@app.route('/devnet')
+def hello_devnet():
+    // Put your Python code here!
+    return 'Hello, DevNet!'
+```
+The last part runs the web server with your defined behavior when the script is executed. This is where you specify the URL and port.
 ```
 # main entry
 if __name__ == '__main__':
-    # run app when script is been execute
-    # this will create a web server at port 8080, you can visit http://0.0.0.0:8080/
+    # run app when the script is executed
+    # this will create a web server at port 8080, you can visit http://0.0.0.0:8080/ and http://0.0.0.0:8080/devnet
     app.run(host='0.0.0.0', port=8080, debug=True)
 ```
+Let's run this.
+* `python3 web-server.py` Run this command
+* Open a browser and go to `http://0.0.0.0:8080/` You should see "Hello, World!"
+* Now go to `http://0.0.0.0:8080/devnet` You should see "Hello, DevNet!"
+Congratulations! You just created a web service for your Python program! You served it through your simple web server running at port 8080. Exciting!
 
-Now let's run our new web service and REST API...
+You can put all your Python code in here and create some really cool web services. Next, we need to RESTify it so that your program can respond to REST requests.
 
-#### Next Step: Run our new web service and call our new REST API with Postman.
+#### Next Step: Create a REST API service for your Python program using Flask.
