--- a/labs/rustycoder-python-restAPI-flask/3.md
+++ b/labs/rustycoder-python-restAPI-flask/3.md
@@ -1,24 +1,73 @@
-## Step 4. Run our new web service and call our new REST API with Postman.
+# Step 3. Create a REST API service for your Python program using Flask.
 
-Now let's put it all together. In the last step we created a REST API to handle `GET` & `POST` request operation to *device* resource.
-* `python3 rest-api.py` Run the program. The service will running at the url : `http://0.0.0.0:8080/api/devices/`
-* Make a `GET` request to that API [http://0.0.0.0:8080/api/devices/](http://0.0.0.0:8080/api/devices/) using **Postman**
-![](/posts/files/rustycoder-python-restAPI-flask/assets/images/img-1.png)`
+It's also useful to expose your Python program through REST APIs. This can be done easily with Flask. We have some sample code to get you started in a file called ``rest-api.py``. You downloaded it earlier.
 
-Next, we will make a **POST** request using **Postman** to add another device to the list
-* Add `Content-Type : application/json` to the header
-![](/posts/files/rustycoder-python-restAPI-flask/assets/images/img-2.png)`
-* Add the request body
-```json
-{
-    "name":"NX-9K-1",
-    "ip":"10.0.0.3"
-}
+* `cd /Users/username/Code/devnet-rustycoder-samplecode/python-flask-helloworld`
+* `more rest-api.py`
+
+We will create a more interesting web server/web service and RESTify the API. Now let's take a deeper look at the code.
+
+The first part imports the Flask library and creates the app instance, but this time we will import some useful functions that will help us with our REST calls.
 ```
-![](/posts/files/rustycoder-python-restAPI-flask/assets/images/img-3.png)`
-* Send your request
-![](/posts/files/rustycoder-python-restAPI-flask/assets/images/img-4.png)`
+# import functions from the flask library
+from flask import Flask, jsonify, request, abort
 
-Wow! You just created a REST API for your python program and called your APIs from Postman!
+# create an app instance
+app = Flask(__name__)
+```
+Next, we will create a new resource called `devices` which has an `id`, device name `name`, and device IP address `ip`.
+```
+# create a devices resource
+devices = [
+    {
+        "id": 0,
+        "name": "NX-9K-1",
+        "ip": "10.0.0.1"
+    },
+    {
+        "id": 1,
+        "name": "NX-9K-2",
+        "ip": "10.0.0.2"
+    }
+]
+```
+Next, we define the behavior of our program for the REST APIs. We are creating a REST API for `http://baseurl/api/devices/` with `GET` and `POST`. We will turn our response into JSON using `jsonify`.
+```
+# handle GET request
+@app.route('/api/devices/', methods=['GET'])
+def get_devices():
+    return jsonify({'tasks': devices})
 
-#### Next Step: Call a REST API from your python program using requests
+# handle POST request
+@app.route('/api/devices/', methods=['POST'])
+def post_device():
+    #  check required parameters
+    # if doesn't have all required parameters, return 404 error
+    if not request.json or 'name' not in request.json or 'ip' not in request.json:
+        abort(404)
+
+    # generate device obj
+    device = {
+        "id": len(devices),
+        "name": request.json['name'],
+        "ip": request.json['ip']
+    }
+
+    # add device obj to devices resources
+    devices.append(device)
+
+    # return devices resources with 201 state code
+    return jsonify({'task': devices}), 201
+```
+The last part runs the web server with your REST API at the specified URL and port when the script is executed.
+```
+# main entry
+if __name__ == '__main__':
+    # run app when script is been execute
+    # this will create a web server at port 8080, you can visit http://0.0.0.0:8080/
+    app.run(host='0.0.0.0', port=8080, debug=True)
+```
+
+Now let's run our new web service and REST API.
+
+#### Next Step: Run our new web service and call our new REST API with Postman.
