--- a/labs/rustycoder-python-restAPI-flask/4.md
+++ b/labs/rustycoder-python-restAPI-flask/4.md
@@ -1,41 +1,24 @@
-## Step 5. Call a REST API from your python program using requests
+# Step 4. Run our new web service and call our new REST API with Postman
 
-We will now show you how to call other REST APIs from your python program. This is very easy using the **requests** package in python.
+Now let's put it all together. In the last step we created a REST API to handle `GET` & `POST` request operation to *device* resource.
+* `python3 rest-api.py` Run the program. The service will running at the url : `http://0.0.0.0:8080/api/devices/`
+* Make a `GET` request to that API [http://0.0.0.0:8080/api/devices/](http://0.0.0.0:8080/api/devices/) using **Postman**
+![](/posts/files/rustycoder-python-restAPI-flask/assets/images/img-1.png)`
 
-In your sample code folder you will see a file called `requests-rest-api.py`. Let's take a look.
-
-The first part of the code imports the **requests** and **json** libraries.
+Next, we will make a **POST** request using **Postman** to add another device to the list
+* Add `Content-Type : application/json` to the header
+![](/posts/files/rustycoder-python-restAPI-flask/assets/images/img-2.png)`
+* Add the request body
+```json
+{
+    "name":"NX-9K-1",
+    "ip":"10.0.0.3"
+}
 ```
-# import functions from the request library
-import requests, json
-```
-The next part makes the REST API call, in this case we will use `GET`.
-```
-# Make the REST API call
-r = requests.get('http://0.0.0.0:8080/api/devices')
-```
-As you can guess, the requests library allows you to pass usernames and passwords and tokens for authentication `r = requests.get('url',auth=('user','pass'))` and make `POST` requests with `requests.post()` as well.
+![](/posts/files/rustycoder-python-restAPI-flask/assets/images/img-3.png)`
+* Send your request
+![](/posts/files/rustycoder-python-restAPI-flask/assets/images/img-4.png)`
 
-Next we simply print the results.
-```
-print("print r\n", r)
-print("\nprint r.status_code\n", r.status_code)
-print("\nprint r.headers\n", r.headers)
-print("\nprint r.headers['content-type']\n", r.headers['content-type'])
-print("\nprint r.text\n", r.text)
-```
-Now let's put it all together by running your REST-API web service from the previous step and running this to make your call.
-* In one terminal window, type `python3 rest-api.py`
-* In another terminal window, type `python3 requests-rest-api.py`
+Wow! You just created a REST API for your Python program and called your APIs from Postman!
 
-Congratulations! You just made a REST API call from your python program!
-
-#### Learn more and code
-
-We intentionally designed this lab to help you quickly install the tools and libraries you need and quickly get you to working code. You can now dig deeper to learn the tools and libraries more thoroughly. Most importantly, you can now have fun and write your own code!
-
-We hope you feel good, because you really accomplished a lot in this lab.
-
-You're not looking so rusty anymore!
-
-#### Congratulations! You've Completed [Rusty Coder : REST APIs in Python with Flask and requests!]
+#### Next Step: Call a REST API from your Python program using requests
